fix(button): apply half gap space only on regular button, but not iconButton

--- a/packages/components/src/button/button.css
+++ b/packages/components/src/button/button.css
@@ -12,17 +12,6 @@
     appearance: button;
     text-decoration: none;
 
-    &[data-icon-only='true'] {
-      width: var(--sl-element-height);
-      padding: var(--sl-space-0);
-    }
-
-    &[data-icon-only='false'] {
-      & [data-sl-icon-small], [data-sl-icon] {
-        margin-left: calc(var(--sl-space-05) * -1);
-      }
-    }
-
     &:focus {
       outline: none;
     }
@@ -38,6 +27,22 @@
       justify-content: center;
       opacity: 1;
       transition: opacity 300ms;
+
+      & [data-sl-icon]:first-child {
+        margin-left: calc(var(--sl-space-1) * -1);
+      }
+
+      & [data-sl-icon-small]:first-child {
+        margin-left: calc(var(--sl-space-1) * -1);
+      }
+
+      & [data-sl-icon]:last-child {
+        margin-left: calc(var(--sl-space-05) * -1);
+      }
+
+      & [data-sl-icon-small]:last-child {
+        margin-left: calc(var(--sl-space-05) * -1);
+      }
     }
 
     & > [data-sl-button-overlay] {
