--- a/packages/components/src/button/stories/style.css
+++ b/packages/components/src/button/stories/style.css
@@ -1,6 +1,6 @@
 .variants--grid {
   --cell-size: 96px;
-  --column-number: 7;
+  --column-number: 6;
 
   display: grid;
   grid-template-columns: repeat(var(--column-number), var(--cell-size));
